--- a/admin/src/components/widgetlarge/WidgetLarge.css
+++ b/admin/src/components/widgetlarge/WidgetLarge.css
@@ -1,63 +1,61 @@
-.widgetLg{
-    flex:2;
+.widgetLg {
+    flex: 2;
     -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
     padding: 20px;
 }
 
-.widgetLgButton{
+.widgetLgButton {
     padding: 5px 7px;
     border: none;
     border-radius: 10px;
 
 }
 
-.widgetLgButton.Approved{
-    background-color:#65faf2 ;
-    color:#3bb077;
+.widgetLgButton.approved {
+    background-color: #65faf2;
+    color: #3bb077;
 }
 
-.widgetLgButton.Declined{
-    background-color:#fff0f1 ;
-    color:#d95087;
+.widgetLgButton.declined {
+    background-color: #fff0f1;
+    color: #d95087;
 }
 
-.widgetLgButton.Pending{
-    background-color:#ebf1fe ;
-    color:#2a7ade;
+.widgetLgButton.pending {
+    background-color: #ebf1fe;
+    color: #2a7ade;
 }
 
-.widgetLgTitle{
+.widgetLgTitle {
     font-size: 22px;
     font-weight: 600;
 }
 
-.widgetLgTable{
+.widgetLgTable {
     width: 100%;
     border-spacing: 20px;
 }
 
-.widgetLgTh{
+.widgetLgTh {
     text-align: left;
 }
 
-.widgetLgUser{
+.widgetLgUser {
     display: flex;
     align-items: center;
     font-weight: 600;
 }
 
-.widgetLgDate, .widgetLgAmount{
+.widgetLgDate,
+.widgetLgAmount {
     font-weight: 300;
 }
 
-.widgetLgImg{
+.widgetLgImg {
     width: 40px;
     height: 40px;
     border-radius: 50%;
     object-fit: cover;
     margin-right: 10px;
 }
-
-
-
